# scientific-retrieval-engine

./: .env.example  .gitignore  .ruff.toml  LICENSE  Makefile  README.md  alembic.ini  cli.py  docker-compose.yml  mypy.ini  pyproject.toml
alembic/: .gitignore  env.py
alembic/versions/: 20250226_add_chunk_metadata.py  20251217_schema_v2.py  2a65b2e7cc1f_initial_schema.py
explorer/: app.py
literature_retrieval_engine/: __init__.py  api.py
literature_retrieval_engine/core/: __init__.py  matching.py
literature_retrieval_engine/hybrid_search/: models.py
literature_retrieval_engine/providers/: __init__.py  adapters.py
literature_retrieval_engine/services/: doi_resolver_service.py  evidence_service.py  full_text_resolver_service.py  paper_enrichment_service.py  paper_merge_service.py  search_service.py
retrieval/: __init__.py  api.py  cache.py  cli.py  config.py  engine.py  exceptions.py  matching.py  models.py  session.py  settings.py
retrieval/acquisition/: downloader.py  title_match.py  unpaywall.py
retrieval/adapters/: __init__.py  paper_adapters.py
retrieval/apps/: explorer.py
retrieval/chunking/: __init__.py  grobid_chunker.py
retrieval/clients/: __init__.py  base.py  crossref.py  datacite.py  grobid.py  openalex.py  opencitations.py  semanticscholar.py  unpaywall.py
retrieval/core/: __init__.py  identifiers.py  matching.py  models.py  session.py  settings.py
retrieval/discovery/: __init__.py  openalex.py
retrieval/hybrid/: bm25_index.py  embeddings.py  faiss_index.py  hybrid_index.py  models.py
retrieval/hybrid_search/: __init__.py
retrieval/index/: __init__.py  chroma.py  colbert.py  export.py
retrieval/parsing/: __init__.py  bibliography.py  citations.py  grobid_client.py  tei_chunker.py  tei_header.py
retrieval/providers/: __init__.py  adapters.py
retrieval/retrieval/: __init__.py  postprocess.py  types.py
retrieval/services/: __init__.py  crossref_service.py  datacite_service.py  doi_resolver_service.py  evidence_service.py  full_text_resolver_service.py  full_text_validation.py  openalex_service.py  opencitations_service.py  paper_chunker_service.py  paper_enrichment_service.py  paper_merge_service.py  search_service.py  semanticscholar_service.py  unpaywall_service.py
retrieval/storage/: __init__.py  dao.py  db.py  files.py  migrations.py  models.py
scripts/: demo_session.py  migrate.py
tests/: conftest.py  test_base_http_client.py  test_cache.py  test_cached_pipeline_integration.py  test_citation_fallbacks.py  test_datacite_client.py  test_doi_resolver_service.py  test_faiss_index.py  test_full_text_resolver_service.py  test_full_text_validation.py  test_grobid_chunker.py  test_grobid_client.py  test_hybrid_index.py  test_hybrid_search_index.py  test_identifiers.py  test_matching.py  test_openalex_service.py  test_opencitations_client.py  test_paper_chunker_service.py  test_paper_enrichment_service.py  test_paper_merge_service.py  test_retrieval_client_crossref.py  test_retrieval_init.py  test_search_service_datacite_integration.py  test_search_service_grouping.py  test_search_service_merge.py  test_search_service_openalex_cursor.py  test_search_service_title_resolution.py  test_unpaywall_service.py
tests/fixtures/: grobid_sample.xml  openalex_work_sample.json
tests/integration/: test_chromadb_index_smoke.py  test_colbert_index_smoke.py  test_dao_integration.py  test_e2e_real_services_and_chromadb.py  test_e2e_real_services_and_colbert.py  test_grobid_client.py  (+2 more)
(+33 files in other folders)
