[project]
name = "retrieval-system"
version = "0.1.0"
description = "Local knowledge retrieval system scaffold"
authors = [{ name = "Scientific Retrieval Engine Team" }]
requires-python = ">=3.11,<3.12"
readme = "README.md"
dependencies = [
    "requests==2.32.5",
    "pydantic==2.12.5",
    "pydantic-settings==2.12.0",
    "psycopg[binary]==3.3.2",
    "tenacity==9.1.2",
    "lxml==6.0.2",
    "python-dotenv==1.2.1",
    "colbert-ai==0.2.22",
    "torch>=2.0.0",
    "tiktoken==0.12.0",
    "alembic>=1.13.0",
    "setuptools>=65.0.0",
]

[dependency-groups]
dev = [
    "responses==0.25.8",
    "ruff==0.14.9",
    "mypy==1.19.1",
]

tests = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-mock",
    "pytest-timeout",
    "httpx",
]


[tool.pytest.ini_options]
markers = [
    "integration: marks tests that rely on external services",
    "slow: marks tests that take a long time to run (deselect with '-m \"not slow\"')",
]
timeout = 300  # Default timeout of 5 minutes for all tests
