[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "retrieval-system"
version = "0.1.0"
description = "Local knowledge retrieval system scaffold"
authors = [{ name = "Scientific Retrieval Engine Team" }]
requires-python = ">=3.11,<3.12"
readme = "README.md"

dependencies = [
    "requests>=2.32.5,<3.0",
    "pydantic>=2.12.5,<3.0",
    "pydantic-settings>=2.12.0,<3.0",
    "tenacity>=9.1.2,<10.0",
    "lxml>=6.0.2,<7.0",
    "python-dotenv>=1.2.1,<2.0",
    "faiss-cpu>=1.9.0,<2.0",
    "numpy>=1.24.0,<3.0",
    "sentence-transformers==5.2.0",
    "torch>=2.9.1",
    "tiktoken==0.12.0",
    "setuptools>=80.9.0",
]

[dependency-groups]
dev = [
    "responses>=0.25.8",
    "ruff>=0.14.9",
    "mypy>=1.19.1",
    "types-requests>=2.31.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.15.1",
    "pytest-timeout>=2.0.0",
    "httpx>=0.28.1",
]

[tool.hatch.build.targets.wheel]
packages = ["retrieval"]

[tool.pytest.ini_options]
markers = [
    "integration: marks tests that rely on external services",
    "slow: marks tests that take a long time to run (deselect with '-m \"not slow\"')",
]
timeout = 300  # Default timeout of 5 minutes for all tests
