[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "literature-retrieval-engine"
version = "0.1.0"
description = "A Literature Retrieval Engine for Autonomous Deep Research"
authors = [{ name = "j0yk1ll" }]
requires-python = ">=3.11,<3.12"
readme = "README.md"

dependencies = [
    "requests",
    "pydantic",
    "pydantic-settings",
    "tenacity",
    "lxml",
    "python-dotenv",
    "faiss-cpu",
    "numpy",
    "sentence-transformers",
    "torch",
    "tiktoken",
    "setuptools",
]

[dependency-groups]
dev = [
    "responses",
    "ruff",
    "mypy",
    "types-requests",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-mock",
    "pytest-timeout",
    "httpx",
]

[tool.hatch.build.targets.wheel]
packages = ["literature_retrieval_engine"]

[tool.pytest.ini_options]
markers = [
    "integration: marks tests that rely on external services",
    "slow: marks tests that take a long time to run (deselect with '-m \"not slow\"')",
]
timeout = 300  # Default timeout of 5 minutes for all tests
